microconfig-core/src/test/resources/repo/components/exceptions/bad/cyclic/cyclicDetect/exception.dev
Can't build configs for root component 'cyclicDetect[dev]'.
Exception in '../components/exceptions/cyclic/cyclicDetect/service.properties:1'
Property: cyclic.c1=${cyclicDetect@cyclic.c2}
Can't resolve ${cyclicDetect@cyclic.c2}
Can't build configs for root component 'cyclicDetect[dev]'.
Exception in '../components/exceptions/cyclic/cyclicDetect/service.properties:1'
Can't resolve placeholder ${cyclicDetect@cyclic.c2}